--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <main>
@@ -18,15 +19,18 @@
 
         <div class="sign">
             <div class="msg">
-                <p>Try it free 7 days then $20/mo. thereafter</p>
+                <p>
+                    <span>Try it free 7 days</span>
+                    then $20/mo. thereafter
+                </p>
             </div>
             <div class="card">
-                <input type="text" name="fname" id="fname" placeholder="First Name">
-                <input type="text" name="lname" id="lname" placeholder="Last Name">
-                <input type="email" name="email" id="email" placeholder="Email Address">
-                <input type="password" name="password" id="password" placeholder="Password">
+                <input type="text" name="fname" id="fname" placeholder="First Name" required>
+                <input type="text" name="lname" id="lname" placeholder="Last Name" required>
+                <input type="email" name="email" id="email" placeholder="Email Address" required>
+                <input type="password" name="password" id="password" placeholder="Password" required>
                 <button>CLAIM YOUR FREE TRIAL</button>
-                <p>By clicking  the button, you are agrreing to our 
+                <p>By clicking  the button, you are agreeing to our 
                     <span>Terms and Services</span>
                 </p>
             </div>
